Hide invisible form elements to fix broken tabbing
- due to the fact that every form (1,2,3) had visible elements,
only hidden by low opacity value, using [TAB] to navigate on the banner
caused the banner to look broken / become unusable.

Adding visibility: hidden will prevent the banner from being broken,
tabbing navigation is still not working perfectly for every element though.

for  https://phabricator.wikimedia.org/T322934

--- a/components/DonationForm/3-step-form.pcss
+++ b/components/DonationForm/3-step-form.pcss
@@ -65,13 +65,27 @@ to use a 2 step form.
 		justify-content: center;
 	}
 
+	.wmde-banner-form--is-step-1 {
+		.wmde-banner-form-step-2,
+		.wmde-banner-form-step-3 {
+			opacity: 0;
+			visibility: hidden;
+		}
+		.wmde-banner-form-step-1 {
+			opacity: 1;
+			visibility: visible;
+		}
+	}
+
 	.wmde-banner-form--is-step-2 {
 		.wmde-banner-form-step-1,
 		.wmde-banner-form-step-3 {
 			opacity: 0;
+			visibility: hidden;
 		}
 		.wmde-banner-form-step-2 {
 			opacity: 1;
+			visibility: visible;
 		}
 	}
 
@@ -79,9 +93,11 @@ to use a 2 step form.
 		.wmde-banner-form-step-1,
 		.wmde-banner-form-step-2 {
 			opacity: 0;
+			visibility: hidden;
 		}
 		.wmde-banner-form-step-3 {
 			opacity: 1;
+			visibility: visible;
 		}
 	}
 }
